added pandas table

--- a/Project_Task_Submission.ipynb
+++ b/Project_Task_Submission.ipynb
@@ -403,9 +403,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Time       Error\n",
+      "0       0  185.187652\n",
+      "1       1  102.634772\n",
+      "2       2   73.214108\n",
+      "3       3   62.616120\n",
+      "4       4   62.735892\n",
+      "..    ...         ...\n",
+      "295   295  586.730854\n",
+      "296   296  581.894829\n",
+      "297   297  500.551139\n",
+      "298   298  325.011886\n",
+      "299   299  363.760544\n",
+      "\n",
+      "[300 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "import numpy as np\n",
@@ -434,103 +455,41 @@
     "    \n",
     "Parallel(n_jobs=multiprocessing.cpu_count(), require='sharedmem')(delayed(train_and_compute_error)(i, j) for i in range(len(lat)) for j in range(len(lon)))\n",
     "error /= 300\n",
-    "error = np.sqrt(error)\n",
-    "def something(): \n",
-    "    for i, _lat in enumerate(lat):\n",
-    "        for j, _lon in enumerate(lon):\n",
-    "            if not np.isnan(all_data[0, i, j]):\n",
-    "                train_and_compute_error(i, j)\n",
-    "                print(error)\n",
-    "                return\n",
-    "                # current_data = (np.array(list(enumerate(all_data[:, i, j]))))\n",
-    "                # training_data_length = int(len(current_data) * 0.2)\n",
-    "                # X = [[a] for a in (current_data[:training_data_length, 0])]\n",
-    "                # y = [[a] for a in (current_data[:training_data_length, 1])]\n",
-    "                # reg = LinearRegression().fit(X, y)\n",
-    "    \n",
-    "                # plt.figure()\n",
-    "                # plt.plot(all_data[:, i, j])\n",
-    "                # plt.plot(reg.predict([[data_point] for data_point in np.arange(len(current_data))]).flatten())\n",
-    "                # plt.show()\n",
-    "                # return\n",
-    "                \n",
-    "# something()"
+    "error = np.sqrt(error)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[185.18765203 102.63477241  73.21410809  62.61611961  62.73589216\n",
-      " 112.63475775 135.3445696  136.44090015 134.91391819  71.93577745\n",
-      " 179.88146282 219.52154046 193.76317717 142.05742162 117.0574373\n",
-      "  73.27468935  86.04937406 135.28614349 156.14241561 157.60615723\n",
-      " 147.230811    85.92424933 137.3672806  187.81628625 137.52275109\n",
-      " 103.9672701   76.4685229   70.31021436  71.50715053 107.9747056\n",
-      " 153.5699526  165.9547027  127.55727673  90.73668556 162.52295224\n",
-      " 195.62902949 204.0525567  132.34875657  94.26175379  70.76859016\n",
-      "  71.27475428 120.24103795 172.25570594 158.81575338 137.07234814\n",
-      "  80.84156184 181.77602774 233.92614381 208.89137352 120.29683565\n",
-      "  78.85334626  81.52592101  91.94005942 113.86303675 138.5666569\n",
-      " 162.87850451 157.36049877  76.73113855 137.383267   176.910035\n",
-      " 247.57540438 135.57609247  91.77041949  94.2945596  105.7371345\n",
-      " 128.71164038 193.96743133 208.65445824 186.93619345  91.76291142\n",
-      " 199.70166666 211.41807166 187.36527298 134.62703892 107.98918853\n",
-      "  99.13628659 103.28171403 138.77438434 181.55269544 207.46115086\n",
-      " 188.30938522  84.72886134 164.68535018 205.79584488 177.92410871\n",
-      "  95.56512797 105.77242186 114.77689167 127.90342348 176.50666993\n",
-      " 213.72796775 223.92867745 221.91454622  99.48552054 175.30559636\n",
-      " 195.38871281 192.19582896 161.47326868 170.91194172 122.21708799\n",
-      " 121.24027145 162.80077727 246.52466059 278.9721255  240.74234056\n",
-      "  96.40655928 169.167629   187.74557607 204.3808142  124.15150147\n",
-      " 149.41585964 143.13049438 147.92738657 230.53376786 272.91700711\n",
-      " 265.88999032 239.76411246 100.61395356 188.53634644 212.84518668\n",
-      " 196.78078506 139.23929945 148.80105959 156.68252288 146.04758643\n",
-      " 183.52076298 239.63008775 250.80424006 258.21082695 133.08833583\n",
-      " 250.14206347 304.24733813 281.70226242 162.54794666 196.25151395\n",
-      " 181.26460565 173.14458694 232.98136762 313.170868   278.91093114\n",
-      " 284.09267431 142.65563175 205.93648874 230.29541375 225.09072705\n",
-      " 158.23614122 183.34190332 186.43827853 200.87929369 251.92265414\n",
-      " 324.55096091 319.33798233 299.61391373 148.10462568 204.81133767\n",
-      " 234.35482089 223.88627915 165.06114558 175.12940025 195.44610622\n",
-      " 214.33818001 249.27807817 278.92216911 321.33672175 343.53777055\n",
-      " 175.63668023 241.73420122 230.68493564 188.09002011 181.27185029\n",
-      " 169.37856712 229.18926265 237.5360314  282.33905742 314.35660409\n",
-      " 348.92970419 360.9319595  195.82199844 225.43568333 232.78702314\n",
-      " 199.06876414 191.39891862 228.00030535 253.22102268 257.09654216\n",
-      " 294.36122596 356.49639334 379.45988015 375.94555706 233.55677508\n",
-      " 209.16491705 215.94415783 215.74374357 194.42949846 240.42998808\n",
-      " 295.21310423 298.63607762 319.13202721 377.36546554 402.90677503\n",
-      " 422.08020474 232.11392392 198.27927465 212.47181484 177.39424341\n",
-      " 203.54551528 288.24284245 285.03599965 309.94614964 365.40588599\n",
-      " 406.87994801 431.52837078 397.8849821  260.99336798 178.22413754\n",
-      " 200.68879448 215.94285131 216.38314279 296.76766829 297.08056129\n",
-      " 317.15965258 364.5962893  450.89676747 455.05535179 419.85768613\n",
-      " 270.03856884 224.49506801 303.5482842  228.41021763 240.71123454\n",
-      " 294.94104889 324.76780138 315.91373941 415.06319818 456.41520704\n",
-      " 457.20520426 426.40611677 268.14662481 215.01172638 287.36498998\n",
-      " 258.06729539 256.1239856  329.94083044 328.41780958 323.16883114\n",
-      " 375.19610537 456.38980651 488.87021869 461.25418506 270.44101403\n",
-      " 217.94485676 260.77907375 248.17541903 270.50715507 358.05412793\n",
-      " 378.76296101 391.38193944 436.58809329 496.42785441 511.3113134\n",
-      " 505.80106848 325.17597947 260.2753793  290.12442107 267.18247151\n",
-      " 290.10623955 396.08217275 459.83413628 449.44316113 491.24223883\n",
-      " 540.11309952 564.50006448 514.49212038 328.70502718 243.2627384\n",
-      " 306.18887617 267.05102428 274.81731096 338.17114934 413.33461196\n",
-      " 430.33329338 488.42744498 538.52946963 532.1750858  555.021521\n",
-      " 369.4901097  278.95238732 288.26890213 335.27436226 352.86215602\n",
-      " 377.27752401 408.64425029 430.2412742  478.16639659 593.91765318\n",
-      " 586.73085375 581.89482933 500.55113894 325.01188639 363.76054378] 28849\n"
+     "ename": "ImportError",
+     "evalue": "Missing optional dependency 'tabulate'.  Use pip or conda to install tabulate.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[1;32mD:\\SDKs\\Python\\Python3\\Lib\\site-packages\\pandas\\compat\\_optional.py:142\u001b[0m, in \u001b[0;36mimport_optional_dependency\u001b[1;34m(name, extra, errors, min_version)\u001b[0m\n\u001b[0;32m    141\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 142\u001b[0m     module \u001b[38;5;241m=\u001b[39m \u001b[43mimportlib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimport_module\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    143\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n",
+      "File \u001b[1;32mD:\\SDKs\\Python\\Python3\\Lib\\importlib\\__init__.py:126\u001b[0m, in \u001b[0;36mimport_module\u001b[1;34m(name, package)\u001b[0m\n\u001b[0;32m    125\u001b[0m         level \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m--> 126\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_bootstrap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_gcd_import\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpackage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap>:1204\u001b[0m, in \u001b[0;36m_gcd_import\u001b[1;34m(name, package, level)\u001b[0m\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap>:1176\u001b[0m, in \u001b[0;36m_find_and_load\u001b[1;34m(name, import_)\u001b[0m\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap>:1140\u001b[0m, in \u001b[0;36m_find_and_load_unlocked\u001b[1;34m(name, import_)\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tabulate'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[159], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame([[i, elt] \u001b[38;5;28;01mfor\u001b[39;00m i, elt \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(error)], columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTime\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_markdown\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtablefmt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgrid\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[1;32mD:\\SDKs\\Python\\Python3\\Lib\\site-packages\\pandas\\core\\frame.py:2756\u001b[0m, in \u001b[0;36mDataFrame.to_markdown\u001b[1;34m(self, buf, mode, index, storage_options, **kwargs)\u001b[0m\n\u001b[0;32m   2754\u001b[0m kwargs\u001b[38;5;241m.\u001b[39msetdefault(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtablefmt\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpipe\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   2755\u001b[0m kwargs\u001b[38;5;241m.\u001b[39msetdefault(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshowindex\u001b[39m\u001b[38;5;124m\"\u001b[39m, index)\n\u001b[1;32m-> 2756\u001b[0m tabulate \u001b[38;5;241m=\u001b[39m \u001b[43mimport_optional_dependency\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtabulate\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2757\u001b[0m result \u001b[38;5;241m=\u001b[39m tabulate\u001b[38;5;241m.\u001b[39mtabulate(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   2758\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m buf \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[1;32mD:\\SDKs\\Python\\Python3\\Lib\\site-packages\\pandas\\compat\\_optional.py:145\u001b[0m, in \u001b[0;36mimport_optional_dependency\u001b[1;34m(name, extra, errors, min_version)\u001b[0m\n\u001b[0;32m    143\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[0;32m    144\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m errors \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraise\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m--> 145\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n\u001b[0;32m    146\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    148\u001b[0m \u001b[38;5;66;03m# Handle submodules: if we have submodule, grab parent module from sys.modules\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: Missing optional dependency 'tabulate'.  Use pip or conda to install tabulate."
      ]
     }
    ],
    "source": [
-    "print(error, cnt)\n"
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame([[i, elt] for i, elt in enumerate(error)], columns=[\"Time\", \"Error\"])\n",
+    "print(df.to_markdown())"
    ]
   },
   {
@@ -542,22 +501,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[93], line 27\u001b[0m\n\u001b[0;32m     19\u001b[0m                     reg \u001b[38;5;241m=\u001b[39m LinearRegression()\u001b[38;5;241m.\u001b[39mfit(X, y)\n\u001b[0;32m     21\u001b[0m                     \u001b[38;5;66;03m# print(reg.predict([[data_point] for data_point in np.arange(len(all_data))]).flatten())\u001b[39;00m\n\u001b[0;32m     22\u001b[0m                     \u001b[38;5;66;03m# plt.figure()\u001b[39;00m\n\u001b[0;32m     23\u001b[0m                     \u001b[38;5;66;03m# plt.plot(all_data[month::12, i, j])\u001b[39;00m\n\u001b[0;32m     24\u001b[0m                     \u001b[38;5;66;03m# plt.plot(reg.predict([[data_point] for data_point in np.arange(len(current_data))]).flatten())\u001b[39;00m\n\u001b[0;32m     25\u001b[0m                     \u001b[38;5;66;03m# plt.show()\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m \u001b[43msomething\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[93], line 15\u001b[0m, in \u001b[0;36msomething\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np\u001b[38;5;241m.\u001b[39misnan(all_data[month, i, j]):\n\u001b[0;32m     14\u001b[0m     current_data \u001b[38;5;241m=\u001b[39m (np\u001b[38;5;241m.\u001b[39marray(\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28menumerate\u001b[39m(all_data[month::\u001b[38;5;241m12\u001b[39m, i, j]))))\n\u001b[1;32m---> 15\u001b[0m     np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mshuffle(current_data)\n\u001b[0;32m     16\u001b[0m     training_data_length \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(current_data) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.5\u001b[39m)\n\u001b[0;32m     17\u001b[0m     y \u001b[38;5;241m=\u001b[39m [[a] \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m (current_data[:training_data_length, \u001b[38;5;241m1\u001b[39m])]\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "import numpy as np\n",
@@ -580,10 +526,10 @@
     "                    reg = LinearRegression().fit(X, y)\n",
     "    \n",
     "                    # print(reg.predict([[data_point] for data_point in np.arange(len(all_data))]).flatten())\n",
-    "                    # plt.figure()\n",
-    "                    # plt.plot(all_data[month::12, i, j])\n",
-    "                    # plt.plot(reg.predict([[data_point] for data_point in np.arange(len(current_data))]).flatten())\n",
-    "                    # plt.show()\n",
+    "                    plt.figure()\n",
+    "                    plt.plot(all_data[month::12, i, j])\n",
+    "                    plt.plot(reg.predict([[data_point] for data_point in np.arange(len(current_data))]).flatten())\n",
+    "                    plt.show()\n",
     "                    return\n",
     "                    \n",
     "something()"
